--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#00B8D4</color>
     <color name="colorPrimaryDark">#8C9EFF</color>
-    <color name="colorAccent">#64DD17</color>
-    <color name="colorGray">#9E9898</color>
+    <color name="colorAccent">#00BFA5</color>
+    <color name="colorGray">#000000</color>
 </resources>
