--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#00B8D4</color>
     <color name="colorPrimaryDark">#8C9EFF</color>
     <color name="colorAccent">#00BFA5</color>
-    <color name="colorGray">#000000</color>
+    <color name="colorGray">#B3B2B2</color>
 </resources>
