--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,27 +4,74 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+  <group android:scaleX="0.43540162"
+      android:scaleY="0.43540162"
+      android:translateX="10.8"
+      android:translateY="10.8">
+    <path
+        android:pathData="M0,0h198.437v198.437h-198.437z"
+        android:strokeWidth="0.387581">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="0"
+            android:startX="0"
+            android:endY="198.43747"
+            android:endX="198.43747"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF00BFA5"/>
+          <item android:offset="0.5" android:color="#FF00B8D4"/>
+          <item android:offset="1" android:color="#FF8C9EFF"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M60.885,60.884h86.619v86.619h-86.619z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.67799"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="m60.885,60.884c7.549,-15.784 -12.484,-8.713 3.3,-1.165 15.784,7.549 8.713,-12.484 1.165,3.3 -7.549,15.784 12.484,8.713 -3.3,1.165 -15.784,-7.549 -8.713,12.484 -1.165,-3.3z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="6.20117"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M137.145,70.956l0.985,0.098l-6.657,66.639l-0.985,-0.098z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.48233"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M132.395,141.774l-0.003,0.914l-67.064,-0.173l0.003,-0.914z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.38594"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M142.403,75.669l0.982,0.093l-6.334,66.968l-0.982,-0.093z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.48253"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M131.688,70.956l0.985,0.098l-6.657,66.639l-0.985,-0.098z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.48233"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M123.697,100.473l0.537,0.832l-56.27,36.315l-0.537,-0.832z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.48233"
+        android:fillColor="#00000000"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"/>
+  </group>
 </vector>
