--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,16 @@
         <item>reply</item>
         <item>reply_all</item>
     </string-array>
+
+    <string-array name="storeList">
+        <item>@string/storeRidi</item>
+        <item>@string/storeYes24</item>
+        <item>@string/storeAladin</item>
+        <item>@string/storeKyobo</item>
+        <item>@string/storeAmazon</item>
+        <item>@string/storeBc</item>
+        <item>@string/storeInterpark</item>
+        <item>@string/storeY2books</item>
+        <item>@string/storeCustom</item>
+    </string-array>
 </resources>
